# VisionFlux

./: README.md  build_with_pybind.sh  build_with_qtgui.sh  main.py  双击构建_Pybind.ps1  双击构建_QtGui.ps1
MediaManager/: .gitignore  BindClass.cpp  CMakeLists.txt  FrameQueue.h  Logger.cpp  Logger.h  MediaManager.cpp  MediaManager.h  PlayController.cpp  PlayController.h  SdlPlayer.cpp  SdlPlayer.h  一键构建.ps1
MediaManager/FFmpeg/include/libavutil/: ffversion.h
MediaManager/FFmpeg/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
MediaManager/QtGUI/: BottomBar.cpp  BottomBar.h  ButtomBar.cpp  ButtomBar.h  MainWindow.cpp  MainWindow.h  PlayList.cpp  PlayList.h  ProcessPanel.cpp  ProcessPanel.h
MediaManager/SoundTouch/lib/: README-v2.3.3.md
MediaManager/SoundTouch/lib/MSVC/: SoundTouchD.lib  SoundTouchDLLD_x64.lib  SoundTouch_x64.lib
MediaManager/SoundTouch/lib/Win32/: SoundTouch.lib  SoundTouchDLL.lib
MediaManager/common/: Logger.h  Utils.h
cpp/MediaManager/: BmpAndWavAchieve.cpp  BmpAndWavAchieve.h  ButtomBar.cpp  ButtomBar.h  CMakeLists.txt  FrameQueue.h  Log.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MediaManager.cpp  MediaManager.h  PlayController.cpp  PlayController.h  PlayList.cpp  PlayList.h  SdlPlayer.cpp  SdlPlayer.h  SideBar.cpp  SideBar.h  main.cpp
cpp/MediaManager/QtGUI/: ButtomBar.cpp  ButtomBar.h  MainWindow.cpp  MainWindow.h  PlayList.cpp  PlayList.h
cpp/MediaManager/SoundTouch/lib/MSVC/: SoundTouchDLLD.lib  SoundTouchD_x64.lib
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-1aa76bcfc54f0fa0afef.json  codemodel-v2-2631b629c4bc3ef775c3.json  codemodel-v2-52374fbfc01f7baeee7d.json  codemodel-v2-5c82975fa9ce6805d972.json  codemodel-v2-77b18f99b397afcd77c8.json  codemodel-v2-85fddd45df27bfb023d3.json  codemodel-v2-bddf0352203f44306d9f.json  index-2024-09-27T13-37-06-0955.json  index-2024-09-28T11-13-05-0625.json  index-2024-09-29T08-47-09-0194.json  index-2024-10-09T07-25-44-0616.json  index-2024-10-10T08-08-37-0206.json  index-2024-10-13T05-51-01-0223.json  target-MediaManager-Debug-1ad1d0da26a28913fa60.json  target-MediaManager-Debug-496a3a425c035d54c51d.json  target-MediaManager-Debug-4aabf498ee2838268e39.json  target-MediaManager-Debug-6176be85f7429f11fda9.json  target-MediaManager-Debug-6b43375040878a37d76c.json  target-MediaManager-Debug-85c338c06664c43257fd.json  target-MediaManager-Debug-a3db5d426cfd61cc1606.json  target-MediaManager-Debug-b92bbe7c47ef34b912d5.json  target-MediaManager_autogen-Debug-79e7f77d891c3e145461.json
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-e1b93f86fa36114b69ce.json  cmakeFiles-v1-e3ac32c5f1059f2a448b.json  codemodel-v2-059193bab7c0c59f2776.json  codemodel-v2-17012d210d62067ae73e.json  codemodel-v2-289975dcb7bbaa90f17c.json  codemodel-v2-31fff87d8db51e47a31e.json  codemodel-v2-331d025bb9efd50fb04d.json  codemodel-v2-487f321888f71a038f96.json  codemodel-v2-c09cadd717b2edbb1dce.json  index-2024-09-27T14-17-10-0405.json  index-2024-09-27T14-48-49-0617.json  index-2024-09-28T15-01-40-0914.json  index-2024-09-29T07-58-24-0336.json  index-2024-09-29T10-09-28-0816.json  index-2024-10-09T07-22-18-0525.json  index-2024-10-10T07-12-16-0280.json  index-2024-10-12T07-03-28-0902.json  target-MediaManager-Debug-16479fbcb4d2a18148db.json  target-MediaManager-Debug-1a8e328f03d0068faede.json  target-MediaManager-Debug-8072c11af236d56c9370.json  target-MediaManager-Debug-b8bf0fd5452485a9c5ae.json  target-MediaManager-Debug-c9594183dafd674b2174.json  target-MediaManager-Debug-e8ae20640ed9e97bb26c.json
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/MediaManager_autogen/: moc_predefs.h  mocs_compilation.cpp
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/MediaManager_autogen/EWIEGA46WW/: moc_ButtomBar.cpp  moc_MainWindow.cpp  moc_PlayList.cpp  moc_QtAudioPlayer.cpp  moc_SideBar.cpp
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/MediaManager_autogen/LTFMYGGEGO/: moc_ButtomBar.cpp  moc_MainWindow.cpp  moc_PlayList.cpp
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Release/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Release/.cmake/api/v1/reply.prev/: codemodel-v2-9620af311b4642e22aab.json
cpp/build-MediaManager-Desktop_Qt_5_12_12_MinGW_64_bit-Release/MediaManager_autogen/: moc_predefs.h
libs/: mediamanager.cp310-win_amd64.pyd
native_cpp/: BindClass.cpp  CMakeLists.txt  MediaManager.cpp  MediaManager.h  PlayController.cpp  PlayController.h  SdlPlayer.cpp  SdlPlayer.h  build_with_pybind.sh  build_with_qtgui.sh  双击构建_QtGui.ps1  双击构建_onPybind.ps1
native_cpp/QtGUI/: BottomBar.cpp  BottomBar.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  PlayList.cpp  PlayList.h  ProcessPanel.cpp  ProcessPanel.h
native_cpp/SoundTouch/lib/: SoundTouchDLL_x64.lib
native_cpp/common/: FrameQueue.h  Logger.cpp  MediaQueue.h  SystemClock.h  Utils.cpp  Utils.h
(+5 files in other folders)
